# CodeRouter

./: .commit-msg-v0.2.0.txt  .commit-msg-v0.3.0.txt  .editorconfig  .env.publish.tpl  .env.tpl  .gitignore  CHANGELOG.md  README.en.md  README.ja.md  README.md  plan.md  providers.yaml  pyproject.toml  setup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
coderouter/: __init__.py  __main__.py  cli.py  cli_stats.py  cost.py  doctor.py  doctor_apply.py  env_security.py  errors.py  logging.py  output_filters.py
coderouter/adapters/: __init__.py  anthropic_native.py  base.py  openai_compat.py  registry.py
coderouter/config/: __init__.py  capability_registry.py  env_file.py  loader.py  schemas.py
coderouter/data/: __init__.py  model-capabilities.yaml
coderouter/guards/: __init__.py  backend_health.py  memory_pressure.py  tool_loop.py
coderouter/ingress/: __init__.py  anthropic_routes.py  app.py  dashboard_routes.py  metrics_routes.py  openai_routes.py
coderouter/metrics/: __init__.py  collector.py  prometheus.py
coderouter/routing/: __init__.py  adaptive.py  auto_router.py  budget.py  capability.py  fallback.py
coderouter/translation/: __init__.py  anthropic.py  convert.py  tool_repair.py
docs/: free-tier-guide.en.md  free-tier-guide.md  hf-ollama-models.md  llamacpp-direct.en.md  llamacpp-direct.md  lmstudio-direct.en.md  lmstudio-direct.md  quickstart.en.md  quickstart.ja.md  quickstart.md  security.ja.md  security.md  troubleshooting.en.md  troubleshooting.md  usage-guide.en.md  usage-guide.ja.md  usage-guide.md  when-do-i-need-coderouter.md
docs/designs/: v1.5-dashboard-mockup.html  v1.6-auto-router-verification.md  v1.6-auto-router.md
docs/openrouter-roster/: README.md  latest.json
docs/retrospectives/: v0.4.md  v0.5-verify.md  v0.5.md  v0.6.md  v0.7.md  v1.0-verify.md  v1.0.md
examples/: .env.example  providers.auto-custom.yaml  providers.auto.yaml  providers.note-2026.yaml  providers.nvidia-nim.yaml  providers.raspberrypi.yaml  providers.yaml
scripts/: demo_traffic.sh  openrouter_roster_diff.py  verify_v0_5.sh  verify_v1_0.sh
tests/: conftest.py  test_adapter_anthropic.py  test_auto_router.py  test_backend_health.py  test_budget.py  test_capability.py  test_capability_degraded_payload.py  test_capability_registry.py  test_capability_registry_cache_control.py  test_claude_code_suitability.py  test_cli.py  test_cli_stats.py  test_config.py  test_dashboard_endpoint.py  test_doctor.py  test_doctor_apply.py  test_doctor_cache_probe.py  test_env_file.py  test_env_security.py  test_errors.py  test_examples_yaml.py  test_fallback.py  test_fallback_anthropic.py  test_fallback_cache_control.py  test_fallback_cache_observed.py  test_fallback_misconfig_warn.py  test_fallback_paid_gate.py  test_fallback_thinking.py  test_guards_tool_loop.py  test_ingress_anthropic.py  test_ingress_profile.py  test_memory_pressure.py  test_metrics_cache.py  test_metrics_collector.py  test_metrics_cost.py  test_metrics_endpoint.py  test_metrics_jsonl.py  test_metrics_prometheus.py  test_metrics_prometheus_cache.py  test_openai_compat.py  (+9 more)
