[project]
name = "coderouter"
version = "1.5.0"
description = "Local-first, free-first, fallback-built-in LLM router. Claude Code / OpenAI compatible."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "zephel01" }]
keywords = ["llm", "router", "fallback", "local-first", "claude", "openai", "openrouter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# ============================================================
# Runtime dependencies — STRICTLY 5 packages (see plan.md §5.4)
# Do NOT add anthropic / openai / litellm / langchain etc.
# All upstream calls go through httpx directly.
# ============================================================
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.32.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
coderouter = "coderouter.cli:main"

[project.urls]
Repository = "https://github.com/zephel01/CodeRouter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coderouter"]

# ============================================================
# Linting / formatting
# ============================================================
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle / pyflakes
    "I",            # isort
    "B",            # bugbear
    "UP",           # pyupgrade
    "SIM",          # simplify
    "RUF",          # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

# ============================================================
# Type checking
# ============================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

# ============================================================
# Testing
# ============================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
